--- a/Vue/src/assets/css/style.css
+++ b/Vue/src/assets/css/style.css
@@ -890,3 +890,109 @@ textarea {
     font-weight: 700;
     font-size: 16px !important;
 }
+
+
+/* 
+=================================== 
+    Login Form Section Area Start 
+================================= 
+*/
+
+
+.login_form_area{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-color: #5F74D1;
+    background-size: cover;
+    z-index: 111;
+}
+
+.login_form_area::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    /* background: linear-gradient(to bottom right, #4b67e5, #2A3042); */
+    background-color: #2A3042;
+    opacity: 0.8;
+}
+
+.login_form_title h1 {
+    font-size: 35px;
+    color: var(--white);
+    margin-bottom: 6px;
+}
+
+.login_form_title h2{
+    color: var(--white);
+}
+
+.login_form_title h2 {
+    color: var(--white);
+    font-size: 20px;
+}
+
+.login_form {
+    width: 530px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999999;
+    padding: 0px 10px;
+}
+.login_form form {
+    background-color: var(--white);
+    padding: 40px 50px;
+    border-radius: 10px;
+    padding-bottom: 24px;
+}
+.login_from_btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login_form_title {
+    text-align: center;
+    margin-bottom: 90px;
+}
+
+.submit_btn {
+    background-color: #3c4664;
+    color: var(--white);
+    text-align: center;
+    padding: 8px 40px;
+    border-radius: 3px;
+    font-size: 16px;
+    text-align: center;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.logo_icon {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 112px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.logo_icon img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: white;
+    border: 12px solid #ffffff;
+}
+
+@media screen and (max-width: 557px) {
+    .login_form {
+        width: 100%;
+    }
+}
